deploy-caddy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-caddy
  namespace: kiran
  annotations:
    kubernetes.io/change-cause: "canary deployment for caddy"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: caddy
  template:
    metadata:
      labels:
        app: caddy
    spec:
      containers:
      - name: c1
        image: jesuswithme/nginxdemos
