svc-caddy.yaml
apiVersion: v1
kind: Service
metadata:
  name: caddy-service
  namespace: kiran
spec:
  type: ClusterIP
  selector:
    app: caddy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
